Diseño parte 3 sin css

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="boton9">9</string>
     <string name="botonMas">+</string>
     <string name="botonMenos">-</string>
-    <string name="botonPor">*</string>
+    <string name="botonPor">X</string>
     <string name="botonDividir">/</string>
     <string name="botonIgual">=</string>
     <string name="botonComa">,</string>
